# sbsur

./: .gitignore  README.md  pyproject.toml  setup.py
experiments/: chronometer.py  run_experiment.sh  run_sbsur.py  run_ur.py  speed_experiment.py
sbsur/: __init__.py  random_wrapper.pxd  sbs.pxd  sbs.pyx  sequence_generator.pxd  sequence_generator.pyx  unique_randomizer.pxd  unique_randomizer.pyx
sbsur/tests/: test_distribution.py  test_enumeration.py  test_get_logprobs.py  test_sequence_generator.py
